name:                concur
version:             0.1.0.0
synopsis:            A client side web UI framework for Haskell
description:         A client side web UI framework for Haskell
homepage:            https://github.com/ajnsit/concur
license:             BSD3
license-file:        LICENSE
author:              Anupam Jain
maintainer:          ajnsit@gmail.com
copyright:           2017 (C) All Rights Reserved.
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:         -Wall
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Concur
                     , Concur.Run.Console
  other-modules:       Concur.Types
                     , Concur.Free
                     , Concur.Concurrent
  build-depends:       base >= 4.7 && < 5
                     , free

executable todos
  ghc-options:         -Wall
  hs-source-dirs:      example
  main-is:             Todos.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , concur
                     , mtl

source-repository head
  type:     git
  location: https://github.com/ajnsit/concur
