name:                concur
version:             0.1.0.0
synopsis:            A client side web UI framework for Haskell
description:         A client side web UI framework for Haskell
homepage:            https://github.com/ajnsit/concur
license:             BSD3
license-file:        LICENSE
author:              Anupam Jain
maintainer:          ajnsit@gmail.com
copyright:           2017 (C) All Rights Reserved.
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/ajnsit/concur

flag warp
    description: Build ghcjs-dom-hello-warp
    default: True

flag webkitgtk
    description: Build ghcjs-dom-hello-webkitgtk
    default: True

flag webkit2gtk
    description: Use WebKit2 version of WebKitGTK.
    default: True

library
  ghc-options:         -Wall -ferror-spans
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Concur
                     , Control.MonadSTM
                     , Data.MonadTransMap
  other-modules:       Concur.Notify
                     , Concur.Run
                     , Concur.Types
                     , Concur.Widgets
  build-depends:       base >= 4.7 && < 5
                     , free
                     , ghcjs-dom
                     , mtl
                     , transformers
                     , stm

  if !impl(ghcjs)
    hs-source-dirs:    ghc-src
    build-depends:     jsaddle
                     , jsaddle-warp
  else
    hs-source-dirs:    ghcjs-src
    build-depends:     ghcjs-vdom
                     , ghcjs-ffiqq
                     , ghcjs-base


--------------
-- EXAMPLES --
--------------

executable clickCounter
  ghc-options:         -threaded -Wall -ferror-spans
  hs-source-dirs:      examples
  main-is:             ClickCounter.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , concur
                     , mtl
                     , ghcjs-dom
                     , containers

  -- Needs some sort of a webview
  -- if !flag(webkitgtk) || impl(ghcjs) || os(ios)
  --   buildable: False

  if !impl(ghcjs)
    -- Choose suitable runner
    if os(osx) || os(ios)
      build-depends:   jsaddle-wkwebview
    else
      if flag(webkit2gtk)
        build-depends: jsaddle-webkit2gtk
      else
        build-depends: jsaddle-webkitgtk
  else
    build-depends:     ghcjs-vdom
                     , ghcjs-ffiqq
                     , ghcjs-base


executable todos
  ghc-options:         -threaded -Wall -ferror-spans
  hs-source-dirs:      examples
  main-is:             Todos.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , concur
                     , mtl
                     , ghcjs-dom
                     , containers

  -- Needs some sort of a webview
  -- if !flag(webkitgtk) || impl(ghcjs) || os(ios)
  --   buildable: False

  if !impl(ghcjs)
    -- Choose suitable runner
    if os(osx) || os(ios)
      build-depends:   jsaddle-wkwebview
    else
      if flag(webkit2gtk)
        build-depends: jsaddle-webkit2gtk
      else
        build-depends: jsaddle-webkitgtk
  else
    build-depends:     ghcjs-vdom
                     , ghcjs-ffiqq
                     , ghcjs-base
