name:                concur-brick
version:             0.1.0.0
synopsis:            Concur interface to Brick Terminal UI Lib
description:         Concur interface to Brick Terminal UI Lib
homepage:            https://github.com/ajnsit/concur (concur-brick)
license:             BSD3
license-file:        LICENSE
author:              Anupam Jain
maintainer:          ajnsit@gmail.com
copyright:           2017 (C) All Rights Reserved.
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/ajnsit/concur

library
  ghc-options:         -Wall -ferror-spans
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Concur.Brick
                     , Concur.Brick.UI
  other-modules:       Concur.Brick.Run
                     , Concur.Brick.Widgets
  build-depends:       base >= 4.7 && < 5
                     , free
                     , mtl
                     , containers
                     , transformers
                     , stm
                     , vty
                     -- , brick
                     , text
                     , concur-core


--------------
-- EXAMPLES --
--------------

executable snake
  ghc-options:         -threaded -Wall -ferror-spans
  hs-source-dirs:      examples
  main-is:             Snake.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , concur-core
                     , concur-brick
                     , mtl
                     , containers
                     , vty
                     , text
                     , random
