name:                concur-core
version:             0.1.0.0
synopsis:            A client side web UI framework for Haskell. Core framework.
description:         A client side web UI framework for Haskell. Core framework.
homepage:            https://github.com/ajnsit/concur (concur-core)
license:             BSD3
license-file:        LICENSE
author:              Anupam Jain
maintainer:          ajnsit@gmail.com
copyright:           2017 (C) All Rights Reserved.
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:         -Wall -ferror-spans
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Concur.Core
                     , Concur.Core.Types
                     , Concur.Core.Notify
                     , Concur.Core.Pipe
                     , Control.MonadSTM
                     , Control.MonadShiftMap
                     , Control.MultiAlternative
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2
                     , transformers >= 0.5
                     , stm >= 2.4
                     , free >= 4.12
                     , natural-transformation >= 0.4
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ajnsit/concur
