name:                concur-doom
version:             0.1.0.0
synopsis:            Dom diffing for Concur.
description:         Dom diffing for Concur.
homepage:            https://github.com/ajnsit/concur (concur-doom)
license:             BSD3
license-file:        LICENSE
author:              Anupam Jain
maintainer:          ajnsit@gmail.com
copyright:           2017 (C) All Rights Reserved.
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:         -Wall -ferror-spans
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Concur.Doom
                     , Concur.Doom.Attrs
                     , Concur.Doom.Tree
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , diferencia
                     , these
                     , ghcjs-perch
  default-language:    Haskell2010

  if impl(ghcjs)
    hs-source-dirs: src-ghcjs
    build-depends:
      ghcjs-base
  else
    hs-source-dirs: src-ghc
    build-depends:
      ghcjs-base-stub >= 0.1


source-repository head
  type:     git
  location: https://github.com/ajnsit/concur
