name:                concur-react
version:             0.1.0.0
synopsis:            A client side web UI framework for Haskell. React bindings.
description:         A client side web UI framework for Haskell. React bindings.
homepage:            https://github.com/ajnsit/concur (concur-react)
license:             BSD3
license-file:        LICENSE
author:              Anupam Jain
maintainer:          ajnsit@gmail.com
copyright:           2017 (C) All Rights Reserved.
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/ajnsit/concur

flag warp
    description: Build ghcjs-dom-hello-warp
    default: True

flag webkitgtk
    description: Build ghcjs-dom-hello-webkitgtk
    default: True

flag webkit2gtk
    description: Use WebKit2 version of WebKitGTK.
    default: True

library
  js-sources:          jsbits/internal.js
                     , jsbits/concur.compiled.js
  ghc-options:         -Wall -ferror-spans
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Concur.React
                     , Concur.React.Attributes
                     , Concur.React.FFI
                     , Concur.React.Run
                     , Concur.React.VDOM
                     , Concur.React.Widgets
                     , Concur.React.Internal
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2
                     , transformers >= 0.5
                     , stm >= 2.4
                     , free >= 4.12
                     , concur-core

  --  build-depends:     jsaddle >=0.9.2 && <0.10
  --                   , jsaddle-warp >=0.9.2 && <0.10
  if impl(ghcjs)
    build-depends:     ghcjs-base
                     , ghcjs-prim
                     , ghcjs-ffiqq

  default-language:    Haskell2010


executable concur-react-hello
  ghc-options:         -Wall -ferror-spans
  default-language:    Haskell2010
  hs-source-dirs:      examples
  main-is:             HiLo.hs
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2
                     , transformers >= 0.5
                     , stm >= 2.4
                     , free >= 4.12
                     , concur-core
                     , concur-react
                     , random
  default-language:    Haskell2010

  if impl(ghcjs)
    build-depends:     ghcjs-base

  -- Choose suitable runner
  --if !impl(ghcjs)
  --  if os(osx) || os(ios)
  --    build-depends:
  --      jsaddle-wkwebview >=0.9 && <0.10
  --  else
  --    if flag(webkit2gtk)
  --      build-depends:
  --        jsaddle-webkit2gtk >=0.9 && <0.10
  --    else
  --      build-depends:
  --        jsaddle-webkitgtk >=0.9 && <0.10
