name:                concur-react
version:             0.1.0.0
synopsis:            A client side web UI framework for Haskell. React bindings.
description:         A client side web UI framework for Haskell. React bindings.
homepage:            https://github.com/ajnsit/concur (concur-react)
license:             BSD3
license-file:        LICENSE
author:              Anupam Jain
maintainer:          ajnsit@gmail.com
copyright:           2017 (C) All Rights Reserved.
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/ajnsit/concur

library
  js-sources:          jsbits/internal.js
                     , jsbits/concur.compiled.js
  ghc-options:         -Wall -ferror-spans
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Concur.React
                     , Concur.React.DOM
                     , Concur.React.Widgets
                     , Concur.React.Run
                     , Concur.Internal.ReactFFI
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2
                     , transformers >= 0.5
                     , stm >= 2.4
                     , free >= 4.12
                     , concur-core

  if impl(ghcjs)
    hs-source-dirs: src-ghcjs
    build-depends:
      ghcjs-base
  else
    hs-source-dirs: src-ghc
    build-depends:
      ghcjs-base-stub >= 0.1

  default-language:    Haskell2010


executable concur-react-hilo
  ghc-options:         -Wall -ferror-spans
  default-language:    Haskell2010
  hs-source-dirs:      examples
  main-is:             HiLo.hs
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2
                     , transformers >= 0.5
                     , stm >= 2.4
                     , free >= 4.12
                     , concur-core
                     , concur-react
                     , random
  default-language:    Haskell2010

executable concur-react-menu
  ghc-options:         -Wall -ferror-spans
  default-language:    Haskell2010
  hs-source-dirs:      examples
  main-is:             Menu.hs
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2
                     , transformers >= 0.5
                     , stm >= 2.4
                     , free >= 4.12
                     , concur-core
                     , concur-react
  default-language:    Haskell2010

executable concur-react-multi-entry
  ghc-options:         -Wall -ferror-spans
  default-language:    Haskell2010
  hs-source-dirs:      examples
  main-is:             MultiEntry.hs
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2
                     , transformers >= 0.5
                     , stm >= 2.4
                     , free >= 4.12
                     , concur-core
                     , concur-react
  default-language:    Haskell2010
