name:                concur-react-sortable-tree
version:             0.1.0.0
-- synopsis:
description:         Sortable Tree Widget for Concur-React
homepage:            https://github.com/ajnsit/concur
license:             BSD3
license-file:        LICENSE
author:              Anupam Jain
maintainer:          ajnsit@gmail.com
copyright:           2017 Anupam Jain
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  js-sources:          jsbits/index.compiled.js
  ghc-options:         -Wall -ferror-spans
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Concur.React.Components.SortableTree
  other-modules:       Concur.React.Components.SortableTreeFFI
  build-depends:       base
                     , mtl >= 2.2
                     , transformers >= 0.5
                     , stm >= 2.4
                     , free >= 4.12
                     , concur-core
                     , concur-react

  if impl(ghcjs)
    hs-source-dirs: src-ghcjs
    build-depends:
      ghcjs-base
  else
    hs-source-dirs: src-ghc
    build-depends:
      ghcjs-base-stub >= 0.1

  default-language:    Haskell2010

executable sortable-tree-example
  js-sources:          jsbits/index.compiled.js
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Concur.React.Components.SortableTree
                     , Concur.React.Components.SortableTreeFFI
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , stm >= 2.4
                     , concur-core
                     , concur-react
                     , concur-react-sortable-tree

  if impl(ghcjs)
    hs-source-dirs: src-ghcjs
    build-depends:
      ghcjs-base
  else
    hs-source-dirs: src-ghc
    build-depends:
      ghcjs-base-stub >= 0.1

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ajnsit/concur (concur-react-components/sortable-tree)
